# Focus-Breaker

./: README.md
focusBreaker/: .gitignore  pyproject.toml
focusBreaker/docs/: specification.md
focusBreaker/src/: config.py  requirements.txt
focusBreaker/src/core/: escape_hatch.py  mode_controller.py  scheduler.py  session_manager.py  streak_manager.py  timer.py
focusBreaker/src/data/: db.py  models.py
focusBreaker/src/system/: audio.py  display.py  input_blocker.py
focusBreaker/src/tests/: test_audio.py  test_config.py  test_display.py  test_escape_hatch.py  test_input_blocker.py  test_mode_controller.py  test_scheduler.py  test_session_manager.py  test_streak_manager.py  test_timer.py
