[project]
name = "focusbreaker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Fernanne Hannah A. Enimedez", email = "enimedezfh@example.com" }
]
dependencies = [
  "flet>=0.80.0"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
]

[tool.flet]
org = "com.mycompany"
product = "focusbreaker"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"